--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-
+<!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-<head>
-  <title>My</title>
-</head>
-<body>
-</body>
+  <head> <title>Hi</title> </head>
+  <body> </body>
 </html>
